# DQ

./: .editorconfig  .env.demo.example  .env.example  .env.local.example  .env.staging.example  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  aa  current_suggestion.md  docker-compose.local.yml  docker-compose.staging.example.yml  package.json  pnpm-lock.yaml  prompt  tsconfig.base.json  敏感数据处理交付建议参考.md  新.md
apps/notification-worker/: Cargo.toml  README.md
apps/notification-worker/src/: channel.rs  config.rs  event.rs  main.rs  template.rs
apps/notification-worker/templates/: DEFAULT_NOTIFICATION_V1.json  NOTIFY_GENERIC_V1.json
apps/platform-core/: Cargo.toml
apps/platform-core/crates/audit-kit/: Cargo.toml
apps/platform-core/crates/audit-kit/src/: lib.rs
apps/platform-core/crates/auth/: Cargo.toml
apps/platform-core/crates/auth/src/: lib.rs
apps/platform-core/crates/config/: Cargo.toml
apps/platform-core/crates/config/src/: lib.rs
apps/platform-core/crates/db/: Cargo.toml  build.rs
apps/platform-core/crates/db/src/: config.rs  dialect.rs  error.rs  lib.rs  tests.rs
apps/platform-core/crates/db/src/entity/: admin_event_entity.rs  associated_policy.rs  authentication_execution.rs  authentication_flow.rs  authenticator_config.rs  authenticator_config_entry.rs  broker_link.rs  client.rs  client_attributes.rs  client_auth_flow_bindings.rs  client_initial_access.rs  client_node_registrations.rs  client_scope.rs  client_scope_attributes.rs  client_scope_client.rs  client_scope_role_mapping.rs  component.rs  component_config.rs  composite_role.rs  credential.rs  databasechangelog.rs  databasechangeloglock.rs  default_client_scope.rs  event_entity.rs  fed_user_attribute.rs  fed_user_consent.rs  fed_user_consent_cl_scope.rs  fed_user_credential.rs  fed_user_group_membership.rs  fed_user_required_action.rs  fed_user_role_mapping.rs  federated_identity.rs  federated_user.rs  group_attribute.rs  group_role_mapping.rs  identity_provider.rs  identity_provider_config.rs  identity_provider_mapper.rs  idp_mapper_config.rs  jgroups_ping.rs  (+51 more)
apps/platform-core/crates/db/src/query/: json.rs  pagination.rs
apps/platform-core/crates/db/src/runtime/: app_db.rs  connect.rs  mod.rs  transaction.rs
apps/platform-core/crates/db/src/sqlx/: compile_check.rs  mod.rs  mysql.rs  postgres.rs
apps/platform-core/crates/db/src/testing/: mod.rs  seed.rs
apps/platform-core/crates/http/: Cargo.toml
apps/platform-core/crates/http/src/: lib.rs  tests.rs
apps/platform-core/crates/kernel/: Cargo.toml
apps/platform-core/crates/kernel/src/: lib.rs  tests.rs
apps/platform-core/crates/notification-contract/: Cargo.toml
apps/platform-core/crates/notification-contract/src/: lib.rs
apps/platform-core/crates/outbox-kit/: Cargo.toml
apps/platform-core/crates/outbox-kit/src/: lib.rs
apps/platform-core/crates/provider-kit/: Cargo.toml
apps/platform-core/crates/provider-kit/src/: lib.rs  tests.rs
apps/platform-core/src/: lib.rs  main.rs
apps/platform-core/src/app/: bootstrap.rs
apps/platform-core/src/modules/: mod.rs
apps/platform-core/src/modules/access/: mod.rs
apps/platform-core/src/modules/audit/: mod.rs
apps/platform-core/src/modules/audit/api/: handlers.rs  mod.rs  router.rs
apps/platform-core/src/modules/audit/application/: mod.rs
apps/platform-core/src/modules/audit/domain/: mod.rs
apps/platform-core/src/modules/audit/dto/: mod.rs
apps/platform-core/src/modules/audit/repo/: mod.rs
apps/platform-core/src/modules/audit/tests/: api_db.rs  mod.rs
apps/platform-core/src/modules/authorization/: mod.rs
apps/platform-core/src/modules/authorization/domain/: mod.rs
apps/platform-core/src/modules/billing/: api.rs  billing_bridge_handlers.rs  billing_read_handlers.rs  compensation_handlers.rs  db.rs  dispute_handlers.rs  domain.rs  handlers.rs  mock_payment_handlers.rs  mod.rs  models.rs  order_lock_handlers.rs  payment_intent_handlers.rs  payment_result_handlers.rs  payment_result_processor.rs  payout_handlers.rs  policy_handlers.rs  reconciliation_handlers.rs  refund_handlers.rs  service.rs  share_ro_handlers.rs  webhook.rs  webhook_handlers.rs
apps/platform-core/src/modules/billing/api/: mod.rs
apps/platform-core/src/modules/billing/domain/: api_billing_basis.rs  mod.rs  sku_billing_basis.rs
apps/platform-core/src/modules/billing/repo/: api_billing_repository.rs  billing_adjustment_repository.rs  billing_bridge_repository.rs  mod.rs  (+15 more)
apps/platform-core/src/modules/catalog/: api.rs  domain.rs  mod.rs  repository.rs  router.rs  service.rs  standard_scenarios.rs
apps/platform-core/src/modules/consistency/: mod.rs
apps/platform-core/src/modules/contract/: mod.rs
apps/platform-core/src/modules/contract_meta/: mod.rs
apps/platform-core/src/modules/delivery/: mod.rs
apps/platform-core/src/modules/developer/: mod.rs
apps/platform-core/src/modules/dispute/: mod.rs
apps/platform-core/src/modules/fairness/: mod.rs
apps/platform-core/src/modules/iam/: api.rs  domain.rs  mod.rs  repository.rs  service.rs
apps/platform-core/src/modules/inquiry/: mod.rs
apps/platform-core/src/modules/integration/: mod.rs
apps/platform-core/src/modules/listing/: mod.rs
apps/platform-core/src/modules/ops/: mod.rs
apps/platform-core/src/modules/order/: mod.rs  order_templates.rs
apps/platform-core/src/modules/party/: mod.rs
apps/platform-core/src/modules/provider_ops/: mod.rs
apps/platform-core/src/modules/recommend/: mod.rs
apps/platform-core/src/modules/recommendation/: mod.rs  service.rs
apps/platform-core/src/modules/review/: mod.rs
apps/platform-core/src/modules/search/: mod.rs  service.rs
apps/platform-core/src/shared/: constants.rs  mod.rs  outbox.rs
apps/platform-core/tests/: audit_model_contract_integration.rs  iam_party_access_integration.rs
workers/outbox-publisher/: Cargo.toml
workers/outbox-publisher/src/: main.rs
workers/recommendation-aggregator/: Cargo.toml  README.md
workers/recommendation-aggregator/src/: main.rs
workers/search-indexer/: Cargo.toml  README.md
workers/search-indexer/src/: main.rs
(+1423 files in other folders)
