[workspace]
members = [
  "apps/platform-core",
  "apps/platform-core/bin/platform-core",
  "apps/platform-core/crates/kernel",
  "apps/platform-core/crates/config",
  "apps/platform-core/crates/http",
]
resolver = "2"

[workspace.package]
name = "Hermes"
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["luna"]
