[workspace]
members = [
  "xtask",
  "apps/platform-core",
  "apps/platform-core/bin/platform-core",
  "apps/platform-core/crates/kernel",
  "apps/platform-core/crates/config",
  "apps/platform-core/crates/http",
  "apps/platform-core/crates/db",
  "apps/platform-core/crates/auth",
  "apps/platform-core/crates/audit-kit",
  "apps/platform-core/crates/outbox-kit",
  "apps/platform-core/crates/provider-kit",
  "apps/platform-core/crates/notification-contract",
  "apps/notification-worker",
  "workers/outbox-publisher",
  "workers/search-indexer",
  "workers/recommendation-aggregator",
]
resolver = "2"

[workspace.package]
name = "Hermes"
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["luna"]
