[package]
name = "notification-worker"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
config = { path = "../platform-core/crates/config" }
db = { path = "../platform-core/crates/db" }
handlebars = "6"
http = { path = "../platform-core/crates/http" }
kernel = { path = "../platform-core/crates/kernel" }
prometheus = "0.13"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
