[package]
name = "platform-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
audit-kit = { path = "crates/audit-kit" }
auth = { path = "crates/auth" }
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
config = { path = "crates/config" }
db = { path = "crates/db" }
http = { path = "crates/http" }
kernel = { path = "crates/kernel" }
notification-contract = { path = "crates/notification-contract" }
outbox-kit = { path = "crates/outbox-kit" }
provider-kit = { path = "crates/provider-kit" }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-mysql"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "json", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
scopeguard = "1"
tower = { version = "0.5", features = ["util"] }
