[package]
name = "outbox-publisher"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
db = { path = "../../apps/platform-core/crates/db" }
prometheus = "0.13"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
