[package]
name = "recommendation-aggregator"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
db = { path = "../../apps/platform-core/crates/db" }
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
redis = { version = "0.27", features = ["tokio-comp"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
