[package]
name = "db"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
audit-kit = { path = "../audit-kit" }
kernel = { path = "../kernel" }
outbox-kit = { path = "../outbox-kit" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
