[package]
name = "http"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
kernel = { path = "../kernel" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net"] }
